# LibFalcon

./: .gitignore  .travis.yml  CONTRIBUTING  CREDITS  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  configure  configure.ac  format.sh
Documentation/: CONTRIBUTING  CREDITS  LICENSE  TODO  ctype.md  hooks  how-to-use  string.md  test
Documentation/addons/: liballoc-addon
addons/liballoc/: liballoc.c  makefile
addons/textmode/: kputs_hex.c  makefile  textmode.c  textmode_hook.c
ctype/: isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  makefile  tolower.c  toupper.c
doc/: libfalcon.doc
hooks/textmode/: cls.c  kputch.c  kputs.c  kputs_dec.c  kputs_hex.c  makefile  textmode.c
include/: bithack.h  bits.h  ctype.h  endian.h  float.h  hooks.h  kernel.h  math.h  maths.h  stdarg.h  stddef.h  stdint.h  stdlib.h  string.h  textmode.h
include/libfalcon/: textmode.h
kernel/: cpuid.asm  cpuvendor.c  cr.asm  inportb.c  inportl.c  inportw.c  int32-a.c  int32-b.asm  makefile  outportb.c  outportl.c  outportw.c  reboot.c
liballoc/: makefile
libfalcon/: bits.h  ctype.h  kernel.h  stddef.h  stdint.h  string.h
libfalcon/libfalcon/: liballoc.h  textmode.h
maths/: acos.c  add.c  asin.c  atan.c  atan2.c  cos.c  div.c  fabs.c  fmod.c  ldexp.c  makefile  mod.c  mul.c  pow.c  sin.c  sqrt.c  sqrtf.c  sub.c  tan.c
stdlib/: abs.c  atoi.c  atol.c  atoll.c  bsearch.c  div.c  labs.c  ldiv.c  llabs.c  lldiv.c  makefile  rand.c
string/: bcmp.c  bcopy.c  bzero.c  index.c  makefile  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  printk.c  rindex.c  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c  swab.c  vsprintf.c
test/: Makefile  boot.asm  grub.cfg  kernel.c  link.ld
